# wired

./: .coveragerc  .gitignore  .travis.yml  CHANGES.rst  LICENSE.txt  MANIFEST.in  README.rst  bs-config.json  conftest.py  mypy.ini  pyproject.toml  pytest.ini  readthedocs.yaml  readthedocs.yml  science_fiction.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-tests.yml  ci-windows.yml
docs/: Makefile  api.rst  conf.py  conftest.py  examples.rst  factories.rst  index.rst  injection.rst  make.bat  usage.rst
docs/dataclasses/: 01.py  index.rst  models.py  usage.rst
docs/dc/: api.rst  attributes.rst  containers.rst  custom_factories.rst  decorators.rst  field_defaults.rst  index.rst  injected.rst  overrides.rst  simple_construction.rst  simple_injection.rst  usage.rst
docs/examples/: simple_example.py
docs/tutorial/: context.rst  datastore.rst  decoupled.rst  factory.rst  index.rst  overrides.rst  requests_views.rst  settings.rst  simple.rst
docs/tutorials/: index.rst
examples/decorators/: basic_class.py  decorator_args.py  decorator_with_wired_factory.py  no_decorator.py  no_decorator_class.py  register_factory_basic.py  wired_factory_classmethod.py
examples/wired_factory/: register_wired_factory.py  wired_factory_classmethod.py
src/wired/: __init__.py  container.py  decorators.py  injector.py  injector2.py  injector2.py.txt
tests/: conftest.py  test_container.py  test_injector.py  test_injector2_factory.py  test_register_factory.py
tests/dataclasses/: conftest.py  test_di.py  test_field_types.py  test_injector.py  test_registration.py
tests/decorators/: conftest.py  test_basic_class.py  test_no_decorator.py  test_no_decorator_class.py  test_register_factory_basic.py  test_register_factory_wired_factory.py  test_wired_factory_classmethod.py
tests/docs_examples/: conftest.py  test_simple_example.py
tests/examples/: conftest.py  test_examples.py
tests/factories/: autofunction.py  autofunction_interface.py  current.py  (+7 more)
(+173 files in other folders)
