[metadata]
name = wired
version = 0.4
author = Michael Merickel
author_email = pylons-discuss@googlegroups.com
description = An inversion-of-control (IoC) container for building decoupled, configurable, pluggable applications.
long_description = file:README.rst
long_description_content_type = text/x-rst
keywords =
    ioc
    inversion of control
    dependency injection
    service locator
    singleton
    service factory
url = https://github.com/mmerickel/wired
project_urls =
    Documentation = https://wired.readthedocs.io
    Changelog = https://wired.readthedocs.io/en/latest/changes.html
    Issue Tracker = https://github.com/mmerickel/wired/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
package_dir =
     = src
packages = find:
zip_safe = False
install_requires =
    zope.interface
include_package_data = True
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
docs =
    Sphinx
    sphinx_rtd_theme
    venusian
testing =
    pytest
    pytest-cov
    venusian
    sybil
